feat: baseline cluster testing and impl -- spec-kit wip